-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 12.0.0
-
None
-
-
4fe4f59f1 (master)
If no `git-gui` is installed, launching the program fails without any error.
The problem was described in https://forum.qt.io/topic/141335/qt-creator-tools-git-git-tools-gitk-git-gui
The problem might be, that we call `git` with `QProcess::startDetached()` which succeeds, but `git` itself fails to run `git-gui`.
One solution might be use the same code as the `gitk` launcher, but I think that needs some cleanup before.
On the other hand, the problem seems Unix-only, so maybe it's enough to run `git-gui` on Unix and just keep the Windows code as is?
What do you think?
- is required for
-
QTCREATORBUG-19721 Git user interface improvements
-
- Reported
-
| For Gerrit Dashboard: QTCREATORBUG-30137 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 629637,4 | Git: Add error message when git-gui cannot be run | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |