Git: Add error message when git-gui cannot be run

Before we had no error message at all, now the
following is print to the Version Control pane:

```
Cannot launch "git gui".
git: 'gui' is not a git command. See 'git --help'.

The most similar commands are
	gc
	grep
	init
	pull
	push
```

Fixes: QTCREATORBUG-30137
Change-Id: I318e1e9056392cb5c00efac9f33b0dd3381e711e
Reviewed-by: Orgad Shaneh <orgads@gmail.com>